# ant_cranelift_compiler

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: feat.md
examples/: cast_.ant  generics_.ant
include/: ant_math.zig
src/: traits.rs
src/compiler/: compile_state_impl.rs  compiler_impl.rs  function.rs  mod.rs
src/compiler/handler/: compile_call.rs  compile_cast.rs  compile_infix.rs  mod.rs
std/: err.ta  ptr.ant  stl.ta
